Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11175

Iceberg table cannot be loaded when partition value is NULL

    XMLWordPrintableJSON

Details

    • ghx-label-8

    Description

      We get NullPointerException when we try to load an Iceberg table with a NULL partition:

      Thread-11[1] where
        [1] org.apache.impala.util.IcebergUtil.createPartitionTransformValue (IcebergUtil.java:891)
        [2] org.apache.impala.util.IcebergUtil.createPartitionKeys (IcebergUtil.java:879)
        [3] org.apache.impala.util.IcebergUtil.createIcebergMetadata (IcebergUtil.java:857)
        [4] org.apache.impala.util.IcebergUtil.createIcebergMetadata (IcebergUtil.java:844)
        [5] org.apache.impala.catalog.FeIcebergTable$Utils.loadAllPartition (FeIcebergTable.java:583)
        [6] org.apache.impala.catalog.IcebergTable.load (IcebergTable.java:348)
        [7] org.apache.impala.service.CatalogOpExecutor.loadTableMetadata (CatalogOpExecutor.java:1,430)
        [8] org.apache.impala.service.CatalogOpExecutor.updateCatalog (CatalogOpExecutor.java:6,386)
        [9] org.apache.impala.service.JniCatalog.updateCatalog (JniCatalog.java:431)
      

      The issue is reproducible on current master by:

      create table store_sales partitioned by spec (ss_sold_date_sk) stored as iceberg as select * from tpcds_parquet.store_sales;
      

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            boroknagyz Zoltán Borók-Nagy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: